crates/oxc_css_parser/tests/error/less/mixin/definition-missing-comma.snap
---
source: crates/oxc_css_parser/tests/error.rs
assertion_line: 51
---
error: expect token `;`, but found `{`
  ┌─ definition-missing-comma.less:1:15
  │
1 │ .mixin(@a @b) {}
  │               ^


